syntax = "proto3";

import "google/protobuf/descriptor.proto";

package web;

message Status_Code_Descriptor {
    string Description = 1;
}

extend google.protobuf.EnumValueOptions {
    Status_Code_Descriptor status_code_descriptor = 7987672;
}

// https://www.iana.org/assignments/http-status-codes/http-status-codes.xhtml
enum Status_Codes {
    STATUS_CODE_UNUSED = 0 [(status_code_descriptor).Description=""];

    CONTINUE = 100;
    SWITCING_PROTOCOLS = 101;
    PROCESSING = 102;
    EARLY_HINTS = 103;
    reserved 104 to 199;

    OK = 200;
    CREATED = 201;
    ACCEPTED = 202;
    NON_AUTHORITATIVE_INFORMATION = 203;
    NO_CONTENT = 204;
    RESET_CONTENT = 205;
    PARTIAL_CONTENT = 206;
    MULTI_STATUS = 207;
    ALREADY_REPORTED = 208;
    reserved 209 to 225;
    IM_USED = 226;
    reserved 227 to 299;

    MULTIPLE_CHOICES = 300;
    MOVED_PERMANENTLY = 301;
    FOUND = 302;
    SEE_OTHER = 303;
    NOT_MODIFIED = 304;
    USE_PROXY = 305;
    reserved 306;
    TEMPORARY_REDIRECT = 307;
    PERMANENT_REDIRECT = 308;
    reserved 309 to 399;

    BAD_REQUEST = 400;
    NOT_AUTHORIZED = 401;
    PAYMENT_REQUIRED = 402;
    FORBIDDEN = 403;
    NOT_FOUND = 404;
    METHOD_NOT_ALLOWED = 405;
    NOT_ACCEPTABLE = 406;
    PROXY_AUTHENTICATION_REQUIRED = 407;
    REQUEST_TIMEOUT = 408;
    CONFLICT = 409;
    GONE = 410;
    LENGTH_REQUIRED = 411;
    PRECONDITION_FAILED = 412;
    PAYLOAD_TOO_LARGE = 413;
    URI_TOO_LONG = 414;
    UNSUPPORTED_MEDIA_TYPE = 415;
    // TODO: complete 400 codes

    INTERNAL_SERVER_ERROR = 500;
    NOT_IMPLEMENTED = 501;
    BAD_GATEWAY = 502;
    GATEWAY_TIMEOUT = 503;
    HTTP_VERSION_NOT_SUPPORTED = 504;
    VARIANT_ALSO_NEGOTIATES = 505;
    // TODO: complete 500 codes
}
